--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261552207033644%22%3A%2260AAurwm%22%2C%2261553710430834%22%3A%22K8oUp3BW%22%2C%2261558997129559%22%3A%22iEtvZzWH%22%7D",
+        "value": "%7B%2261552207033644%22%3A%2260AAurwm%22%2C%2261553710430834%22%3A%22QQxP0aTG%22%2C%2261558997129559%22%3A%22iEtvZzWH%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-04-27T10:50:36.979Z",
-        "lastAccessed": "2024-04-27T10:50:36.979Z"
+        "creation": "2024-04-27T10:53:50.192Z",
+        "lastAccessed": "2024-04-27T10:53:50.192Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-27T10:50:36.979Z",
-        "lastAccessed": "2024-04-27T10:50:36.979Z"
+        "creation": "2024-04-27T10:53:50.192Z",
+        "lastAccessed": "2024-04-27T10:53:50.192Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-27T10:50:36.979Z",
-        "lastAccessed": "2024-04-27T10:50:36.979Z"
+        "creation": "2024-04-27T10:53:50.192Z",
+        "lastAccessed": "2024-04-27T10:53:50.192Z"
     },
     {
         "key": "ps_n",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-27T10:50:36.979Z",
-        "lastAccessed": "2024-04-27T10:50:36.979Z"
+        "creation": "2024-04-27T10:53:50.192Z",
+        "lastAccessed": "2024-04-27T10:53:50.192Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-27T10:50:36.979Z",
-        "lastAccessed": "2024-04-27T10:50:36.979Z"
+        "creation": "2024-04-27T10:53:50.192Z",
+        "lastAccessed": "2024-04-27T10:53:50.192Z"
     },
     {
         "key": "dpr",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-27T10:50:36.979Z",
-        "lastAccessed": "2024-04-27T10:50:36.979Z"
+        "creation": "2024-04-27T10:53:50.192Z",
+        "lastAccessed": "2024-04-27T10:53:50.192Z"
     },
     {
         "key": "vpd",
@@ -59,62 +59,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-27T10:50:36.979Z",
-        "lastAccessed": "2024-04-27T10:50:36.979Z"
+        "creation": "2024-04-27T10:53:50.192Z",
+        "lastAccessed": "2024-04-27T10:53:50.192Z"
     },
     {
-        "key": "locale",
-        "value": "en_GB",
+        "key": "m_pixel_ratio",
+        "value": "1.75",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-27T10:50:36.979Z",
-        "lastAccessed": "2024-04-27T10:50:36.979Z"
-    },
-    {
-        "key": "fr",
-        "value": "09Lxkd4l1s2GORx55.AWVGJPBDBB2UoFdrrMgLm9dWHO4.BmK-vr..AAA.0.0.BmLNF6.AWWUFbQw7BY",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-04-27T10:50:36.979Z",
-        "lastAccessed": "2024-04-27T10:50:36.979Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61558997129559",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-04-27T10:50:36.979Z",
-        "lastAccessed": "2024-04-27T10:50:36.979Z"
-    },
-    {
-        "key": "xs",
-        "value": "10%3A9CoCJjhpo_HF7g%3A2%3A1714213257%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-04-27T10:50:36.979Z",
-        "lastAccessed": "2024-04-27T10:50:36.979Z"
-    },
-    {
-        "key": "m_page_voice",
-        "value": "61558997129559",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-04-27T10:50:36.979Z",
-        "lastAccessed": "2024-04-27T10:50:36.979Z"
-    },
-    {
-        "key": "presence",
-        "value": "C%7B%22lm3%22%3A%22g.25690228353894767%22%2C%22t3%22%3A%5B%5D%2C%22utc3%22%3A1714214891458%2C%22v%22%3A1%7D",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-04-27T10:50:36.979Z",
-        "lastAccessed": "2024-04-27T10:50:36.979Z"
+        "creation": "2024-04-27T10:53:50.192Z",
+        "lastAccessed": "2024-04-27T10:53:50.192Z"
     },
     {
         "key": "wd",
@@ -122,25 +77,61 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-27T10:50:36.979Z",
-        "lastAccessed": "2024-04-27T10:50:36.979Z"
+        "creation": "2024-04-27T10:53:50.192Z",
+        "lastAccessed": "2024-04-27T10:53:50.192Z"
+    },
+    {
+        "key": "fr",
+        "value": "09Lxkd4l1s2GORx55.AWUYujuxMB3pLql7fC4fwIw__oQ.BmK-vr..AAA.0.0.BmLNky.AWWOEXnQKyY",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-27T10:53:50.192Z",
+        "lastAccessed": "2024-04-27T10:53:50.192Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61553710430834",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-27T10:53:50.192Z",
+        "lastAccessed": "2024-04-27T10:53:50.192Z"
+    },
+    {
+        "key": "xs",
+        "value": "35%3ATFyQRdEVh7fewg%3A2%3A1714215218%3A-1%3A5903",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-27T10:53:50.192Z",
+        "lastAccessed": "2024-04-27T10:53:50.192Z"
+    },
+    {
+        "key": "locale",
+        "value": "vi_VN",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-04-27T10:53:50.192Z",
+        "lastAccessed": "2024-04-27T10:53:50.192Z"
     },
     {
         "key": "fbl_st",
-        "value": "101023902%3BT%3A28570250",
+        "value": "100720780%3BT%3A28570253",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-27T10:50:36.979Z",
-        "lastAccessed": "2024-04-27T10:50:36.979Z"
+        "creation": "2024-04-27T10:53:50.192Z",
+        "lastAccessed": "2024-04-27T10:53:50.192Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2481%3Btimestamp%3A1714215025",
+        "value": "v2%3Bclient_version%3A2481%3Btimestamp%3A1714215222",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-04-27T10:50:36.979Z",
-        "lastAccessed": "2024-04-27T10:50:36.979Z"
+        "creation": "2024-04-27T10:53:50.192Z",
+        "lastAccessed": "2024-04-27T10:53:50.192Z"
     }
 ]
